tests/paczka1/small_fuzzy/17665783.err
Error in line 3: A328 S966 92,5
Error in line 4: FWfdnvG S792 75,3
Error in line 13: DMSApl A328 14,1
